--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,8 @@
 language: rust
-script: cargo build --verbose
+script: cargo build --verbose --release
+deploy:
+  provider: releases
+  file: "target/release/noise-gen"
+  skip_cleanup: true
+  on:
+    tags: true
